globalmart-devops/terraform/modules/vpc/internet_gateway.tf
resource "aws_internet_gateway" "this" {

  vpc_id = aws_vpc.this.id

  tags = merge(
    var.common_tags,
    {
      Name = "${var.name_prefix}-igw-01"
    }
  )
}
